# Yet another one 10,000 foot view @ https://github.com/squillero/10k
# Copyright © 2022 Giovanni Squillero <squillero@polito.it>
# Free for personal or classroom use; see 'LICENSE.md' for details.

[tool.yapf]
based_on_style = "google"
blank_line_before_module_docstring = true
column_limit = 120

[tool.yapfignore]
ignore_patterns = [
  ".*/**",
]

[tool.black]
include = "\\.ipynb"
line-length = 120

[tool.poetry]
authors = ["Giovanni Squillero <squillero@polito.it>"]
description = "Basic environment for Computational Intelligence (2022-23)"
license = "proprietary"
name = "ci22"
version = "0.1.0"

[tool.poetry.dependencies]
black = {extras = ["jupyter"], version = ">=22.6"}
jupyter = ">=1.0.0"
numpy = ">=1.23"
pandas = ">=1.4"
python = "~3.10"
toml = ">=0.10"
torch = "~1.12"
tqdm = ">=4.64"
yapf = ">=0.32"
seaborn = "^0.11.2"
sympy = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
